# datetime-fortran

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  Makefile  Makefile.am  Makefile.ori  README.md  configure.ac  datetime-fortran.pc.in  datetime.f90  datetime_module.f90  fpm.toml  mkdist.sh  scrub-clean.sh  strptime.cpp
.github/workflows/: ci.yml
Examples/: CMakeLists.txt  Readme.md  adds.f90
cmake/: check_strftime.cmake  check_strptime.cmake
examples/: CMakeLists.txt  README.md  add_and_subtract.f90
src/: Makefile.am  datetime.f90  datetime_module.f90
src/lib/: Makefile  Makefile.am  datetime.f90  mod_clock.f90  mod_constants.f90  mod_datetime.f90  mod_strftime.f90  mod_timedelta.f90
src/tests/: Makefile  Makefile.am  datetime_tests.f90  tests  tests-env.sh
test/: Makefile.am  datetime_tests.f90
tests/: Makefile  Makefile.am  Makefile.ori  datetime.f90  datetime_tests.f90  tests-env.sh
